package com.hive.model.dto;

/** 名称-数量行（发言排行榜等） */
public class NameCount {

    private String name;
    private Integer count;

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
    public Integer getCount() { return count; }
    public void setCount(Integer count) { this.count = count; }
}
